Remove *.sdf binary generated by Visual studio when creating a source tar file.
Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,7 +62,8 @@ EXTRA_DIST = ChangeLog.html bark.rtp \
         win/*.c win/*.h win/include/*.h \
         win/include/arpa/*.h win/include/netinet/*.h \
         win/include/sys/*.h \
-        win/rtptools.sln win/rtptools.suo win/rtptools.sdf \
-        win/rtpdump.vcxproj* win/rtpplay.vcxproj* win/rtpsend.vcxproj* win/rtptrans.vcxproj* \
+        win/rtptools.sln win/rtptools.suo \
+        win/rtpdump.vcxproj* win/rtpplay.vcxproj* win/rtpsend.vcxproj* \
+        win/rtptrans.vcxproj* \
         rtptools.spec rtptools.html.in \
         LICENSE README.md
