--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,14 @@ Makefile
 config.*
 autom4te.cache
 compile
-configure
 depcomp
 install-sh
 missing
 mkinstalldirs
 *.o
+/rpmbuild
 /rtpdump
 /rtpplay
 /rtpsend
 /rtptrans
+/win/*.sdf
