check whether socket() needs -lsocket

--- a/configure.local.example
+++ b/configure.local.example
@@ -72,7 +72,6 @@ HAVE_ENDIAN=0
 HAVE_EFTYPE=0
 HAVE_ERR=0
 HAVE_GETHOSTBYNAME=0
-HAVE_GETHOSTBYNAME_NSL=0
 HAVE_GETLINE=0
 HAVE_GETSUBOPT=0
 HAVE_ISBLANK=0
@@ -87,6 +86,7 @@ HAVE_REALLOCARRAY=0
 HAVE_RECALLOCARRAY=0
 HAVE_REWB_BSD=0
 HAVE_REWB_SYSV=0
+HAVE_SOCKET=0
 HAVE_STRCASESTR=0
 HAVE_STRINGLIST=0
 HAVE_STRLCAT=0
