Remove autom4te.cache when make distclean
Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -55,6 +55,7 @@ rpm: $(bin_PROGRAMS) rtptools.spec dist
 
 clean-local:
 	rm -f $(man_HTML) rtptools.html
+	rm -fr ./autom4te.cache
 
 EXTRA_DIST = ChangeLog.html bark.rtp \
         hsearch.h hsearch.c multidump multiplay \
