Remove more files not necessary to build on Win
Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,7 +63,7 @@ EXTRA_DIST = ChangeLog.html bark.rtp \
         win/*.c win/*.h win/include/*.h \
         win/include/arpa/*.h win/include/netinet/*.h \
         win/include/sys/*.h \
-        win/rtptools.sln win/rtptools.suo \
+        win/rtptools.sln \
         win/rtpdump.vcxproj* win/rtpplay.vcxproj* win/rtpsend.vcxproj* \
         win/rtptrans.vcxproj* \
         rtptools.spec rtptools.html.in \
