--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
-dist: trusty
+language: c
 sudo: false
 
-language: c
+matrix:
+    include:
+        - os: linux
+          dist: trusty
+          env: OS=Ubuntu14.04
+        - os: linux
+          dist: precise
+          env: OS=Ubuntu12.04
+        - os: osx
+          env: OS=MacOS
 
 script:
   - ./configure
