--- a/configure.local.example
+++ b/configure.local.example
@@ -68,21 +68,23 @@ CFLAGS="-g -W -Wall -Wstrict-prototypes -Wno-unused-parameter -Wwrite-strings"
 # and will be regarded as failed) or 1 (test will not be run and will
 # be regarded as successful).
 
-HAVE_ENDIAN=0
 HAVE_ERR=0
-HAVE_MSGCONTROL=0
-HAVE_NTOHL=0
-HAVE_PATH_MAX=0
+HAVE_HSEARCH=0
 HAVE_PROGNAME=0
-HAVE_REALLOCARRAY=0
-HAVE_RECALLOCARRAY=0
-HAVE_STRCASESTR=0
-HAVE_STRINGLIST=0
-HAVE_STRLCAT=0
-HAVE_STRLCPY=0
-HAVE_STRPTIME=0
 HAVE_STRTONUM=0
-HAVE_SYS_ENDIAN=0
+
+#HAVE_NTOHL=0
+#HAVE_PATH_MAX=0
+#HAVE_REALLOCARRAY=0
+#HAVE_RECALLOCARRAY=0
+#HAVE_STRCASESTR=0
+#HAVE_STRINGLIST=0
+#HAVE_STRLCAT=0
+#HAVE_STRLCPY=0
+#HAVE_STRPTIME=0
+
+HAVE_BIGENDIAN=0
+HAVE_MSGCONTROL=0
 
 HAVE_LSOCKET=0
 HAVE_LNSL=0
