--- a/win/rtpplay.vcxproj
+++ b/win/rtpplay.vcxproj
@@ -90,7 +90,7 @@
   <ItemGroup>
     <ClCompile Include="../host2ip.c" />
     <ClCompile Include="../hpt.c" />
-    <ClCompile Include="../hsearch.c" />
+    <ClCompile Include="../compat-hsearch.c" />
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../rd.c" />
