--- a/win/rtpdump.vcxproj
+++ b/win/rtpdump.vcxproj
@@ -86,8 +86,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="../host2ip.c" />
-    <ClCompile Include="../hpt.c" />
+    <ClCompile Include="../utils.c" />
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../rd.c" />
