--- a/win/rtpplay.vcxproj
+++ b/win/rtpplay.vcxproj
@@ -88,8 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="../host2ip.c" />
-    <ClCompile Include="../hpt.c" />
+    <ClCompile Include="../utils.c" />
     <ClCompile Include="../compat-hsearch.c" />
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
