use the IANA payload type mapping
* extract the IANA table from rtpdump
* use it in both rtpdump and rtpplay
* drop the outdated period table from rtppplay
* drop rtpplay -p, use the IANA payload types
* edit the rtpplay.1 manpage accordingly
* let win/*.vcxproj know

--- a/Makefile.depend
+++ b/Makefile.depend
@@ -1,6 +1,7 @@
 hsearch.o: hsearch.c sysdep.h hsearch.h
 multimer.o: multimer.c multimer.h notify.h sysdep.h
 notify.o: notify.c sysdep.h notify.h multimer.h
+payload.o: payload.c payload.h
 rd.o: rd.c rtpdump.h sysdep.h
 utils.o: utils.c sysdep.h
 
