windows needs payload.h too

--- a/win/rtpplay.vcxproj
+++ b/win/rtpplay.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../payload.c" />
+    <ClCompile Include="../payload.h" />
     <ClCompile Include="../rd.c" />
     <ClCompile Include="../rtpplay.c" />
     <ClCompile Include="../win\getopt.c" />
