--- a/win/rtpdump.vcxproj
+++ b/win/rtpdump.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../payload.c" />
+    <ClCompile Include="../payload.h" />
     <ClCompile Include="../rd.c" />
     <ClCompile Include="../rtpdump.c" />
     <ClCompile Include="../win\getopt.c" />
