windows: compat-err needs compat-progname

--- a/win/rtpplay.vcxproj
+++ b/win/rtpplay.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="../utils.c" />
     <ClCompile Include="../compat-err.c" />
+    <ClCompile Include="../compat-progname.c" />
     <ClCompile Include="../compat-hsearch.c" />
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
