--- a/win/rtpsend.vcxproj
+++ b/win/rtpsend.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="../utils.c" />
     <ClCompile Include="../compat-err.c" />
+    <ClCompile Include="../compat-progname.c" />
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../rtpsend.c" />
