getopt: use the OpenBSD implementation on Windows
Windows does not have getopt(), so say that in sysdep.h,
declare the function and the helper vars, and provide
compat-getopt.c as with the other compats. A trivial
have-getopt.c sets HAVE_GETOPT on UNIX.

--- a/Makefile.depend
+++ b/Makefile.depend
@@ -10,6 +10,7 @@ rtpsend.o: rtpsend.c notify.h rtp.h sysdep.h multimer.h
 rtptrans.o: rtptrans.c rtp.h sysdep.h rtpdump.h notify.h multimer.h vat.h
 
 compat-err.o: compat-err.c
+compat-getopt.o: compat-getopt.c
 compat-hsearch.o: compat-hsearch.c compat-hsearch.h
 compat-progname.o: compat-progname.c
 compat-strtonum.o: compat-strtonum.c
