Tweaked for current MSC to reduce the undefined errors

--- a/win/rtpplay.vcxproj
+++ b/win/rtpplay.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="../win\winsocklib.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="../sysdep.h" />
     <ClInclude Include="getopt.h" />
     <ClInclude Include="gettimeofday.h" />
     <ClInclude Include="include\arpa\inet.h" />
