windows: don't refer to nonexistent files

--- a/win/rtpdump.vcxproj
+++ b/win/rtpdump.vcxproj
@@ -94,19 +94,12 @@
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../rd.c" />
     <ClCompile Include="../rtpdump.c" />
-    <ClCompile Include="../win\gettimeofday.c" />
-    <ClCompile Include="../win\winsocklib.c" />
+    <ClCompile Include="../win/gettimeofday.c" />
+    <ClCompile Include="../win/winsocklib.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../sysdep.h" />
     <ClInclude Include="gettimeofday.h" />
-    <ClInclude Include="include\arpa\inet.h" />
-    <ClInclude Include="include\netdb.h" />
-    <ClInclude Include="include\netinet\in.h" />
-    <ClInclude Include="include\sys\select.h" />
-    <ClInclude Include="include\sys\socket.h" />
-    <ClInclude Include="include\sys\time.h" />
-    <ClInclude Include="include\unistd.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
