Have compat-gettimeofday for windows
This makes it uniform with the other compat-* implementations,
similarly to the recent compat-getopt. Windows does not have this,
so say that in sysdep.h; for other systems, it's irrelevant.

While here, change the silly (struct timezone *)0 to plain NULL,
drop an unused function, and tweak some whitespace.

--- a/win/rtptrans.vcxproj
+++ b/win/rtptrans.vcxproj
@@ -95,12 +95,10 @@
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../rtptrans.c" />
-    <ClCompile Include="../win\gettimeofday.c" />
-    <ClCompile Include="../win\winsocklib.c" />
+    <ClCompile Include="../win/winsocklib.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../sysdep.h" />
-    <ClInclude Include="gettimeofday.h" />
     <ClInclude Include="include\arpa\inet.h" />
     <ClInclude Include="include\netdb.h" />
     <ClInclude Include="include\netinet\in.h" />
