--- a/win/rtpplay.vcxproj
+++ b/win/rtpplay.vcxproj
@@ -97,12 +97,10 @@
     <ClCompile Include="../multimer.c" />
     <ClCompile Include="../notify.c" />
     <ClCompile Include="../payload.c" />
-    <ClCompile Include="../payload.h" />
+    <ClInclude Include="../payload.h" />
     <ClCompile Include="../rd.c" />
     <ClCompile Include="../rtpplay.c" />
     <ClCompile Include="../win/winsocklib.c" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="../sysdep.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
