timer{add,sub} for systems that don't have it
Properly test for timeradd() and timersub() in have-timer.c
Provide the compatibility implementation in compat-timer.c
Augment ./configure et al accordingly.
Clean up some unused code while here.

--- a/Makefile.depend
+++ b/Makefile.depend
@@ -14,3 +14,4 @@ compat-getopt.o: compat-getopt.c
 compat-gettimeofday.o: compat-gettimeofday.c
 compat-progname.o: compat-progname.c
 compat-strtonum.o: compat-strtonum.c
+compat-timer.o: compat-timer.c
