--- a/configure.local.example
+++ b/configure.local.example
@@ -71,16 +71,7 @@ CFLAGS="-g -W -Wall -Wstrict-prototypes -Wno-unused-parameter -Wwrite-strings"
 HAVE_ERR=0
 HAVE_PROGNAME=0
 HAVE_STRTONUM=0
-
-#HAVE_NTOHL=0
-#HAVE_PATH_MAX=0
-#HAVE_REALLOCARRAY=0
-#HAVE_RECALLOCARRAY=0
-#HAVE_STRCASESTR=0
-#HAVE_STRINGLIST=0
-#HAVE_STRLCAT=0
-#HAVE_STRLCPY=0
-#HAVE_STRPTIME=0
+HAVE_TIMER=0
 
 HAVE_BIGENDIAN=0
 HAVE_MSGCONTROL=0
